--- a/index.html
+++ b/index.html
@@ -13,3 +13,40 @@
     </header>
 </body>
 </html>
+« index.html x
+shead>
+‹meta charset="UTF 8">
+‹meta name="viewport" content="width=divice-width">
+<link rel="stylesheet" href="./reset.css">
+</head>
+<link rel="stylesheet" href="./estilo.css">
+<body>
+<header class="cabecalho">
+<img src="./img[|/menu-removebg-preview.png"
+<img src="./img||/casa-removebg-preview.png"
+alt class="logo">
+alt class="logo">
+</header>
+‹section class="container">
+<h1 class="container-titulo"> 0 CAFÉ </h1>
+<img src="./img[]/Ellipse 1.png" alt="" class="container--img*>
+</ section>
+G留＜众壽口品（Atual
+D E
+‹section class="container--dois">
+<div class="container--descricao">
+ch2 class="descricao--titulo"> Agropecuária- Café</h2>
+<p class="decricao--texto"> A produção de café é uma arte cultivada ao longo de séculos, com técnicas refínadas e tradições passadas de geração em geração. Desde o cultivo das plantas até o momento em que a bebida chega à xícara do apreciador, há um processo intricado que envolve diversos aspectos, desde o clima até as práticas agrícolas e a colheita.</p>
+</div>
+</ section>
+<section class="container--tres">
+‹div class="container-- descricaos">
+<h2 class="descricao-- titulo dois">
+Fascinante sobre o cultivo do café está relacionada ao método de colheita utilizado em algumas regiões: a colheita seletiva, também conhecida como colhes Nesse método, os trabalhadores percorrem os cafezais e selecionam apenas os frutos maduros para a colheita, deixando os verdes ou subdesenvolvidos na pla
+</h2>
+<img src="./imgl]/café em grão foto
+Foto Wenderson AraujoTrilux 1.png" class="container--tres-- img*
+</div>
+Ln 1, Col 1 Espacos: 3 UTF8 UF
+</ section>
+POSITIVO
