--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@ alt class="logo">
 alt class="logo">
 </header>
 ‹section class="container">
-<h1 class="container-titulo"> 0 CAFÉ </h1>
+<h1 class="container-titulo"> SUSTENTABILIDADE AMBIENTAL </h1>
 <img src="./img[]/Ellipse 1.png" alt="" class="container--img*>
 </ section>
 G留＜众壽口品（Atual
 D E
 ‹section class="container--dois">
 <div class="container--descricao">
-ch2 class="descricao--titulo"> Agropecuária- Café</h2>
-<p class="decricao--texto"> A produção de café é uma arte cultivada ao longo de séculos, com técnicas refínadas e tradições passadas de geração em geração. Desde o cultivo das plantas até o momento em que a bebida chega à xícara do apreciador, há um processo intricado que envolve diversos aspectos, desde o clima até as práticas agrícolas e a colheita.</p>
+SUSTENTABILIDADE AMBIENTAL - ações</h2>
+<p class="decricao--texto"</p As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </div>
 </ section>
 <section class="container--tres">
