--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ D E
 ‹section class="container--dois">
 <div class="container--descricao">
 SUSTENTABILIDADE AMBIENTAL - ações</h2>
-<p class="decricao--texto"</p As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
+<p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </div>
 </ section>
 <section class="container--tres">
