--- a/index.html
+++ b/index.html
@@ -39,14 +39,8 @@ SUSTENTABILIDADE AMBIENTAL - ações</h2>
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </div>
 </ section>
-<section class="container--tres">
-
+<section class="container"
 <h2 class="descricao-- titulo dois">
-Fascinante sobre o cultivo do café está relacionada ao método de colheita utilizado em algumas regiões: a colheita seletiva, também conhecida como colhes Nesse método, os trabalhadores percorrem os cafezais e selecionam apenas os frutos maduros para a colheita, deixando os verdes ou subdesenvolvidos na pla
+O QUE É SUSTENTABILIDADE AMBIENTAL?
 </h2>
-<img src="./imgl]/café em grão foto
-Foto Wenderson AraujoTrilux 1.png" class="container--tres-- img*
-</div>
-Ln 1, Col 1 Espacos: 3 UTF8 UF
-</ section>
-POSITIVO
+<img src=
