--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     </header>
 </body>
 </html>
-« index.html x
-shead>
-‹meta charset="UTF 8">
-‹meta name="viewport" content="width=divice-width">
 <link rel="stylesheet" href="./reset.css">
 </head>
 <link rel="stylesheet" href="./estilo.css">
@@ -38,9 +34,11 @@ D E
 SUSTENTABILIDADE AMBIENTAL - ações</h2>
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </div>
-</ section>
+<section>
 <section class="container"
 <h2 class="descricao-- titulo dois">
 O QUE É SUSTENTABILIDADE AMBIENTAL?
+<p class="descricao--texto2"> Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à 
+    ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras.</p>
 </h2>
 <img src=
