--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ G留＜众壽口品（Atual
 D E
 ‹section class="container--dois">
 <div class="container--descricao">
-SUSTENTABILIDADE AMBIENTAL - ações</h2>
+AÇÕES</h2
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </div>
 <section>
