--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ alt class="logo">
 G留＜众壽口品（Atual
 D E
 ‹section class="container--dois">
-<div class="container--descricao">
-AÇÕES</h2
+<div class="container--descricao--titulo1"> AÇÕES</h2
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </div>
 <section>
