--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ alt class="logo">
 </ section>
 G留＜众壽口品（Atual
 D E
-‹section class="container--dois">
-<div class="container--descricao--titulo1"> AÇÕES</h2
+‹section class="container">
+<h2 class="container--descricao--titulo1"> AÇÕES</h2
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
-</div>
+</h2>
 <section>
 <section class="container"
 <h2 class="descricao-- titulo dois">
