--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ alt class="logo">
 G留＜众壽口品（Atual
 D E
 ‹section class="container">
-<h2 class="container--descricao--titulo1"> AÇÕES</h2
+<h2 class="container--descricao--titulo"> AÇÕES</h2>
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </h2>
 <section>
-<section class="container"
-<h2 class="descricao-- titulo dois">
-O QUE É SUSTENTABILIDADE AMBIENTAL?
+<section class="container">
+<h2 class="container--descricao--titulo2">
+O QUE É SUSTENTABILIDADE AMBIENTAL? </h2>
 <p class="descricao--texto2"> Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à 
     ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras.</p>
 </h2>
