--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ alt class="logo">
 G留＜众壽口品（Atual
 D E
 ‹section class="container">
+<img src="images-removebg-preview (1) 1.png"
 <h2 class="container--descricao--titulo"> AÇÕES</h2>
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </h2>
