--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="cabecalho">
         <span class="menu"></span>
         <img src="./Group 1.png" alt=" " class="logo">
-        <img src="./home_-_amarela-removeng-preview 1">
+        <img src="./home-removebg-preview.png">
     </header>
 </body>
 </html>
