--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <link rel="stylesheet" href="./estilo.css">
 <body>
 <header class="cabecalho">
-<img src="./img[|/menu-removebg-preview.png"
-<img src="./img||/casa-removebg-preview.png"
+<img src="./menu2-removebg-preview.png"
+<img src="./home-removebg-preview.png"
 alt class="logo">
 
 </header>
