--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     </header>
 </body>
 </html>
+<link rel="stylesheet" href="./reset.css">
+</head>
+<link rel="stylesheet" href="./estilo.css">
+<body>
 <header class="cabecalho">
 <img src="./menu2-removebg-preview.png"
 <img src="./home-removebg-preview.png"
 alt class="logo">
 
-</header>
 
-<h1 class="container-titulo"> SUSTENTABILIDADE AMBIENTAL </h1>
+
+<section class="container-titulo"> SUSTENTABILIDADE AMBIENTAL >
 <img src="./img[]/Ellipse 1.png" alt="" class="container--img*>
-</ section>
-G留＜众壽口品（Atual
-D E
+</section>
+
 ‹section class="container">
 <img src="images-removebg-preview (1) 1.png"
 <h2 class="container--descricao--titulo"> AÇÕES</h2>
