--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ alt class="logo">
 
 
 
-<section class="container-titulo"> SUSTENTABILIDADE AMBIENTAL >
-<img src="./img[]/Ellipse 1.png" alt="" class="container--img*>
+<section class="container-titulo"> SUSTENTABILIDADE AMBIENTAL
 </section>
 
 ‹section class="container">
