--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <img src="./home-removebg-preview.png">
     </header>
 </body>
-</html>
 <link rel="stylesheet" href="./reset.css">
 </head>
 <link rel="stylesheet" href="./estilo.css">
@@ -20,6 +19,8 @@
 <img src="./menu2-removebg-preview.png"
 <img src="./home-removebg-preview.png"
 alt class="logo">
+</header>
+
 
 
 
