--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ alt class="logo">
 
 
 
-<section class="container-titulo"> SUSTENTABILIDADE AMBIENTAL
+<h2 class ="container-titulo"> SUSTENTABILIDADE AMBIENTAL
+</h2>
+
 </section>
 
 ‹section class="container">
