--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sustentabilidade ambiental</title>
+   <meta charset="UTF 8">
+   <meta name="viewport" content="width=divice-width">
+   <link rel="stylesheet" href="./reset.css">
+   <link rel="stylesheet" href="./estilo.css">
 </head>
+
 <body>
-    <header class="cabecalho">
-        <span class="menu"></span>
-        <img src="./home-removebg-preview.png">
-    </header>
+
+   <header class="cabecalho">
+      <img src="./img/home-removebg-preview.png" alt class="logo1">
+      <img src="./img/menu2-removebg-preview.png" alt class="logo2">
+
+   </header>
 </body>
 <link rel="stylesheet" href="./reset.css">
 </head>
