--- a/index.html
+++ b/index.html
@@ -15,25 +15,14 @@
       <img src="./img/menu2-removebg-preview.png" alt class="logo2">
 
    </header>
-</body>
-<link rel="stylesheet" href="./reset.css">
-</head>
-<link rel="stylesheet" href="./estilo.css">
-<body>
-<header class="cabecalho">
-<img src="./menu2-removebg-preview.png"
-alt class="logo">
-</header>
+   <section class="container">
+    <h1 class="container-titulo"> SUSTENTABILIDADE AMBIENTAL </h1>
+    <img src="./images-removebg-preview (1) 1.png" alt="" class="container--img">
+ </section>
 
 
 
 
-<h2 class ="container-titulo"> SUSTENTABILIDADE AMBIENTAL
-</h2>
-
-</section>
-
-<img src="images-removebg-preview (1) 1.png"
 <h2 class="container--descricao--titulo"> AÇÕES</h2>
 <p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
 </h2>
