--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <img src="./images-removebg-preview (1) 1.png" alt="" class="container--img">
  </section>
 
+ <section class="container--dois">
+    <div class="container--descricao">
+       <h2 class="descricao--titulo1"> AÇÕES</h2>
+       <p class="decricao--texto">  As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
+    </div>
+ </section>
 
-
-
-<h2 class="container--descricao--titulo"> AÇÕES</h2>
-<p class="decricao--texto"> As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
-</h2>
-<section>
 <section class="container">
 <h2 class="container--descricao--titulo2">
 O QUE É SUSTENTABILIDADE AMBIENTAL? </h2>
