--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
     </div>
  </section>
 
-<section class="container">
-<h2 class="container--descricao--titulo2">
-O QUE É SUSTENTABILIDADE AMBIENTAL? </h2>
-<h2
-<section>
-<p class="descricao--texto2"> Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à 
-    ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras.</p>
-<img src="./1814 2.png"
-</h2>
-</section>
+ <section class="container--tres">
+    <div class="container--descricaos">
+       <h2 class="descricao--titulo-dois"> O QUE É SUSTENTABILIDADE AMBIENTAL
+       <p class="decricao--texto">Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras</p>
+    </h2>
+    <img src="img/1814 2.png">
+
+</div>
