--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
    <header class="cabecalho">
-      <img src="./img/18625-removebg-preview.png" alt class="logo1">
+      <img src="./img/home-removebg-preview.png" alt class="logo1">
       <img src="./img/menu2-removebg-preview.png" alt class="logo2">
 
    </header>
@@ -32,9 +32,7 @@
        <h2 class="descricao--titulo-dois"> O QUE É SUSTENTABILIDADE AMBIENTAL
        <p class="decricao--texto">Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras</p>
     </h2>
-    <img src="img/1814 2.png">
-
-</div>
+    <img src="img/1814 2.png"
 </body>
 
 </html>
