--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
        <p class="decricao--texto">Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras</p>
     </h2>
     <img src="img/1814 2.png"
+
+    <section class="container--quatro">
+        <div class="container--descricaos"> 
+        <h2 class="descricao--titulo--tres"> COMO GARANTIR A SUSTENTABILIDADE AMBIENTAL? 
+        <p class="decricao--texto"> Para que haja sustentabilidade ambiental é preciso que não existam riscos para os elementos naturais que sustentam a integridade global do ecossistema, que são a qualidade do ar, dos solos, das águas e dos seres vivos.
+            Ainda é necessário algumas ações para encontrar novas tecnologias para reduzir a pressão sobre o meio ambiente, que minimizem o esgotamento e propiciem substitutos para esses recursos.
+            </p>
+        </h2>
+
+
+
 </body>
 
 </html>
