--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             Ainda é necessário algumas ações para encontrar novas tecnologias para reduzir a pressão sobre o meio ambiente, que minimizem o esgotamento e propiciem substitutos para esses recursos.
             </p>
         </h2>
+    </div>
+</section>
+
         <img src="img/2023_09_11_FIA-MeioAmbiente-CapaBlog 1.png"
 
 
