--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
 </section>
 
 
-    <section class="container--dois">
+    <section class="container--quatro">
         <div class="container--descricao">
-           <h2 class="descricao--titulo--tres"> O QUE É SUSTENTABILIDADE AMBIENTAL?
+           <h2 class="descricao--titulo--quatro"> O QUE É SUSTENTABILIDADE AMBIENTAL?
             <p class="decricao--texto"> Para que haja sustentabilidade ambiental é preciso que não existam riscos para os elementos naturais que sustentam a integridade global do ecossistema, que são a qualidade do ar, dos solos, das águas e dos seres vivos.
                 Ainda é necessário algumas ações para encontrar novas tecnologias para reduzir a pressão sobre o meio ambiente, que minimizem o esgotamento e propiciem substitutos para esses recursos.
                 </p>
            </h2>
+           <img src="img/2023_09_11_FIA-MeioAmbiente-CapaBlog 1.png"class="container--img--quatro">
         </div>
     </section>
    
