--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <section class="container--dois">
     <div class="container--descricao">
        <h2 class="descricao--titulo1"> AÇÕES</h2>
-       <p class="decricao--texto">  As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
+       <p class="descricao--texto">  As ações sustentáveis são práticas que podem ser realizadas de maneira individual ou coletiva e que produzem como resultado uma preservação dos recursos ambientais</p>
        <img src="./img/images-removebg-preview (1) 1.png" alt="" class="container--img">
     </div>
  </section>
