--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
  </section>
 
  <section class="container--tres">
-    <div class="container--descricaos">
+   <img src="img/1814 2.png"  class="container--img--tres">
+ <div class="container--descricaos">
        <h2 class="descricao--titulo-dois"> O QUE É SUSTENTABILIDADE AMBIENTAL
        <p class="decricao--texto">Sustentabilidade ambiental é um dos três pilares que compõem o princípio da sustentabilidade, sendo, na realidade, o primeiro aspecto que associamos à ideia de desenvolvimento sustentável, uma vez que tem relação direta com a preservação do meio ambiente e com a garantia da disponibilidade dos recursos naturais para as gerações futuras</p>
     </h2>
